styles.css
* {
    list-style: none;
}


/* Button Styles */
button {
    background-color: #4CAF50; /* Green */
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
    border-radius: 12px;
    transition: background-color 0.3s ease;
}

button:hover {
    background-color: #45a049;
}

/* ID todos Styles */
#todos {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
}

/* #todos >  */


.todo {
    list-style: none;
    display: flex;
    justify-content: space-between;
    background: #f9f9f9;
    margin: 5px 0;
    padding: 10px;
    border: 1px solid #ddd;
    border-radius: 4px;
    transition: background-color 0.3s ease;
}

#todos > todo:hover {
    background-color: #ffffff;
}

/* Modal Styles */
#modal {
    background-color: #f1f1f1;
} 


::backdrop{
    background-color: rgba(0, 0, 0, 0.8);
}

ul, ol {
    list-style: none;
    padding: 0;
    margin: 0;
}

